crates/ty_python_semantic/resources/mdtest/snapshots/override.md_-_`typing.override`_-_Basics_(b7c220f8171f11f0).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: override.md - `typing.override` - Basics
mdtest path: crates/ty_python_semantic/resources/mdtest/override.md
---

# Python source files

## mdtest_snippet.pyi

```
  1 | from typing_extensions import override, Callable, TypeVar
  2 | 
  3 | def lossy_decorator(fn: Callable) -> Callable: ...
  4 | 
  5 | class A:
  6 |     @override
  7 |     def __repr__(self): ...  # fine: overrides `object.__repr__`
  8 | 
  9 | class Parent:
 10 |     def foo(self): ...
 11 |     @property
 12 |     def my_property1(self) -> int: ...
 13 |     @property
 14 |     def my_property2(self) -> int: ...
 15 | 
 16 |     baz = None
 17 | 
 18 |     @classmethod
 19 |     def class_method1(cls) -> int: ...
 20 |     @staticmethod
 21 |     def static_method1() -> int: ...
 22 |     @classmethod
 23 |     def class_method2(cls) -> int: ...
 24 |     @staticmethod
 25 |     def static_method2() -> int: ...
 26 |     @lossy_decorator
 27 |     def decorated_1(self): ...
 28 |     @lossy_decorator
 29 |     def decorated_2(self): ...
 30 |     @lossy_decorator
 31 |     def decorated_3(self): ...
 32 | 
 33 | class Child(Parent):
 34 |     @override
 35 |     def foo(self): ...  # fine: overrides `Parent.foo`
 36 |     @property
 37 |     @override
 38 |     def my_property1(self) -> int: ...  # fine: overrides `Parent.my_property1`
 39 |     @override
 40 |     @property
 41 |     def my_property2(self) -> int: ...  # fine: overrides `Parent.my_property2`
 42 |     @override
 43 |     def baz(self): ...  # fine: overrides `Parent.baz`
 44 |     @classmethod
 45 |     @override
 46 |     def class_method1(cls) -> int: ...  # fine: overrides `Parent.class_method1`
 47 |     @staticmethod
 48 |     @override
 49 |     def static_method1() -> int: ...  # fine: overrides `Parent.static_method1`
 50 |     @override
 51 |     @classmethod
 52 |     def class_method2(cls) -> int: ...  # fine: overrides `Parent.class_method2`
 53 |     @override
 54 |     @staticmethod
 55 |     def static_method2() -> int: ...  # fine: overrides `Parent.static_method2`
 56 |     @override
 57 |     def decorated_1(self): ...  # fine: overrides `Parent.decorated_1`
 58 |     @override
 59 |     @lossy_decorator
 60 |     def decorated_2(self): ...  # fine: overrides `Parent.decorated_2`
 61 |     @lossy_decorator
 62 |     @override
 63 |     def decorated_3(self): ...  # fine: overrides `Parent.decorated_3`
 64 | 
 65 | class OtherChild(Parent): ...
 66 | 
 67 | class Grandchild(OtherChild):
 68 |     @override
 69 |     def foo(self): ...  # fine: overrides `Parent.foo`
 70 |     @override
 71 |     @property
 72 |     def my_property1(self) -> int: ...  # fine: overrides `Parent.my_property1`
 73 |     @override
 74 |     def baz(self): ...  # fine: overrides `Parent.baz`
 75 |     @classmethod
 76 |     @override
 77 |     def class_method1(cls) -> int: ...  # fine: overrides `Parent.class_method1`
 78 |     @staticmethod
 79 |     @override
 80 |     def static_method1() -> int: ...  # fine: overrides `Parent.static_method1`
 81 |     @override
 82 |     @classmethod
 83 |     def class_method2(cls) -> int: ...  # fine: overrides `Parent.class_method2`
 84 |     @override
 85 |     @staticmethod
 86 |     def static_method2() -> int: ...  # fine: overrides `Parent.static_method2`
 87 |     @override
 88 |     def decorated_1(self): ...  # fine: overrides `Parent.decorated_1`
 89 |     @override
 90 |     @lossy_decorator
 91 |     def decorated_2(self): ...  # fine: overrides `Parent.decorated_2`
 92 |     @lossy_decorator
 93 |     @override
 94 |     def decorated_3(self): ...  # fine: overrides `Parent.decorated_3`
 95 | 
 96 | class Invalid:
 97 |     @override
 98 |     def ___reprrr__(self): ...  # error: [invalid-explicit-override]
 99 |     @override
100 |     @classmethod
101 |     def foo(self): ...  # error: [invalid-explicit-override]
102 |     @classmethod
103 |     @override
104 |     def bar(self): ...  # error: [invalid-explicit-override]
105 |     @staticmethod
106 |     @override
107 |     def baz(): ...  # error: [invalid-explicit-override]
108 |     @override
109 |     @staticmethod
110 |     def eggs(): ...  # error: [invalid-explicit-override]
111 |     @property
112 |     @override
113 |     def bad_property1(self) -> int: ...  # error: [invalid-explicit-override]
114 |     @override
115 |     @property
116 |     def bad_property2(self) -> int: ...  # error: [invalid-explicit-override]
117 |     @property
118 |     @override
119 |     def bad_settable_property(self) -> int: ...  # error: [invalid-explicit-override]
120 |     @bad_settable_property.setter
121 |     def bad_settable_property(self, x: int) -> None: ...
122 |     @lossy_decorator
123 |     @override
124 |     def lossy(self): ...  # TODO: should emit `invalid-explicit-override` here
125 |     @override
126 |     @lossy_decorator
127 |     def lossy2(self): ...  # TODO: should emit `invalid-explicit-override` here
128 | 
129 | # TODO: all overrides in this class should cause us to emit *Liskov* violations,
130 | # but not `@override` violations
131 | class LiskovViolatingButNotOverrideViolating(Parent):
132 |     @override
133 |     @property
134 |     def foo(self) -> int: ...
135 |     @override
136 |     def my_property1(self) -> int: ...
137 | 
138 |     # TODO: This maybe shouldn't be a Liskov violation? Whether called on the type or
139 |     # on an instance, it will behave the same from the caller's perspective. The only difference
140 |     # is whether the method body gets access to `cls`, which is not a concern of Liskov.
141 |     @staticmethod
142 |     @override
143 |     def class_method1() -> int: ...  # error: [invalid-method-override]
144 |     @classmethod
145 |     @override
146 |     def static_method1(cls) -> int: ...
147 | 
148 | # Diagnostic edge case: `override` is very far away from the method definition in the source code:
149 | 
150 | T = TypeVar("T")
151 | 
152 | def identity(x: T) -> T: ...
153 | 
154 | class Foo:
155 |     @override
156 |     @identity
157 |     @identity
158 |     @identity
159 |     @identity
160 |     @identity
161 |     @identity
162 |     @identity
163 |     @identity
164 |     @identity
165 |     @identity
166 |     @identity
167 |     @identity
168 |     @identity
169 |     @identity
170 |     @identity
171 |     @identity
172 |     @identity
173 |     @identity
174 |     def bar(self): ...  # error: [invalid-explicit-override]
```

# Diagnostics

```
error[invalid-explicit-override]: Method `___reprrr__` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:97:5
    |
 96 | class Invalid:
 97 |     @override
    |     ---------
 98 |     def ___reprrr__(self): ...  # error: [invalid-explicit-override]
    |         ^^^^^^^^^^^
 99 |     @override
100 |     @classmethod
    |
info: No `___reprrr__` definitions were found on any superclasses of `Invalid`
info: rule `invalid-explicit-override` is enabled by default

```

```
error[invalid-explicit-override]: Method `foo` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:99:5
    |
 97 |     @override
 98 |     def ___reprrr__(self): ...  # error: [invalid-explicit-override]
 99 |     @override
    |     ---------
100 |     @classmethod
101 |     def foo(self): ...  # error: [invalid-explicit-override]
    |         ^^^
102 |     @classmethod
103 |     @override
    |
info: No `foo` definitions were found on any superclasses of `Invalid`
info: rule `invalid-explicit-override` is enabled by default

```

```
error[invalid-explicit-override]: Method `bar` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:103:5
    |
101 |     def foo(self): ...  # error: [invalid-explicit-override]
102 |     @classmethod
103 |     @override
    |     ---------
104 |     def bar(self): ...  # error: [invalid-explicit-override]
    |         ^^^
105 |     @staticmethod
106 |     @override
    |
info: No `bar` definitions were found on any superclasses of `Invalid`
info: rule `invalid-explicit-override` is enabled by default

```

```
error[invalid-explicit-override]: Method `baz` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:106:5
    |
104 |     def bar(self): ...  # error: [invalid-explicit-override]
105 |     @staticmethod
106 |     @override
    |     ---------
107 |     def baz(): ...  # error: [invalid-explicit-override]
    |         ^^^
108 |     @override
109 |     @staticmethod
    |
info: No `baz` definitions were found on any superclasses of `Invalid`
info: rule `invalid-explicit-override` is enabled by default

```

```
error[invalid-explicit-override]: Method `eggs` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:108:5
    |
106 |     @override
107 |     def baz(): ...  # error: [invalid-explicit-override]
108 |     @override
    |     ---------
109 |     @staticmethod
110 |     def eggs(): ...  # error: [invalid-explicit-override]
    |         ^^^^
111 |     @property
112 |     @override
    |
info: No `eggs` definitions were found on any superclasses of `Invalid`
info: rule `invalid-explicit-override` is enabled by default

```

```
error[invalid-explicit-override]: Method `bad_property1` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:112:5
    |
110 |     def eggs(): ...  # error: [invalid-explicit-override]
111 |     @property
112 |     @override
    |     ---------
113 |     def bad_property1(self) -> int: ...  # error: [invalid-explicit-override]
    |         ^^^^^^^^^^^^^
114 |     @override
115 |     @property
    |
info: No `bad_property1` definitions were found on any superclasses of `Invalid`
info: rule `invalid-explicit-override` is enabled by default

```

```
error[invalid-explicit-override]: Method `bad_property2` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:114:5
    |
112 |     @override
113 |     def bad_property1(self) -> int: ...  # error: [invalid-explicit-override]
114 |     @override
    |     ---------
115 |     @property
116 |     def bad_property2(self) -> int: ...  # error: [invalid-explicit-override]
    |         ^^^^^^^^^^^^^
117 |     @property
118 |     @override
    |
info: No `bad_property2` definitions were found on any superclasses of `Invalid`
info: rule `invalid-explicit-override` is enabled by default

```

```
error[invalid-explicit-override]: Method `bad_settable_property` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:118:5
    |
116 |     def bad_property2(self) -> int: ...  # error: [invalid-explicit-override]
117 |     @property
118 |     @override
    |     ---------
119 |     def bad_settable_property(self) -> int: ...  # error: [invalid-explicit-override]
    |         ^^^^^^^^^^^^^^^^^^^^^
120 |     @bad_settable_property.setter
121 |     def bad_settable_property(self, x: int) -> None: ...
    |
info: No `bad_settable_property` definitions were found on any superclasses of `Invalid`
info: rule `invalid-explicit-override` is enabled by default

```

```
error[invalid-method-override]: Invalid override of method `class_method1`
   --> src/mdtest_snippet.pyi:143:9
    |
141 |     @staticmethod
142 |     @override
143 |     def class_method1() -> int: ...  # error: [invalid-method-override]
    |         ^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Parent.class_method1`
144 |     @classmethod
145 |     @override
    |
   ::: src/mdtest_snippet.pyi:19:9
    |
 18 |     @classmethod
 19 |     def class_method1(cls) -> int: ...
    |         ------------------------- `Parent.class_method1` defined here
 20 |     @staticmethod
 21 |     def static_method1() -> int: ...
    |
info: `LiskovViolatingButNotOverrideViolating.class_method1` is a staticmethod but `Parent.class_method1` is a classmethod
info: This violates the Liskov Substitution Principle
info: rule `invalid-method-override` is enabled by default

```

```
error[invalid-explicit-override]: Method `bar` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:174:9
    |
172 |     @identity
173 |     @identity
174 |     def bar(self): ...  # error: [invalid-explicit-override]
    |         ^^^
    |
   ::: src/mdtest_snippet.pyi:155:5
    |
154 | class Foo:
155 |     @override
    |     ---------
156 |     @identity
157 |     @identity
    |
info: No `bar` definitions were found on any superclasses of `Foo`
info: rule `invalid-explicit-override` is enabled by default

```
